--- a/src/App/futa/TokenDetails/CustomBid/CustomBid.module.css
+++ b/src/App/futa/TokenDetails/CustomBid/CustomBid.module.css
@@ -20,3 +20,118 @@ letter-spacing: -0.48px;
 .container header svg{
     cursor: pointer;
 }
+
+
+.customBidContainer,.fdvContainer, .bidSizeContainer, .currencySelectorContainer{
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+    width: 100%;
+}
+
+.customBidContainer{
+    padding-top: 16px;
+}
+.label{
+    color: var(--text2, #8B98A5);
+font-size: 12px;
+
+}
+
+.fdvContainer input{
+    outline: none;
+    border: none;
+
+    background: var(--dark2, #12121A);
+    display: flex;
+    width: 100%;
+height: 35px;
+padding: 0px 16px;
+align-items: center;
+gap: 16px;
+align-self: stretch;
+color: var(--text1, #F0F0F8);
+font-size: 18px;
+letter-spacing: -0.36px;
+}
+
+.userQtyDisplay{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+
+.maxButtonContainer{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 8px
+}
+.maxButtonContainer p{
+color: var(--text1, #F0F0F8);
+font-size: 12px;
+
+}
+
+.maxButtonContainer button{
+    outline: none;
+    border: none;
+    background: transparent;
+    color: var(--accent1, #0CCDFF);
+    font-size: 12px;
+
+}
+.networkFeeContainer{
+    display: flex;
+    padding: 8px;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+    border: 1px solid var(--dark3);
+    margin: 0 16px;
+    
+}
+.networkFeeRow{
+    width: 100%;
+ display: flex;
+ flex-direction: row;
+ align-items: center; 
+ justify-content: space-between;  
+ padding: 0 8px
+}
+.alignCenter{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 8px;
+}
+.networkFeeContainer p{
+    color: var(--text2, #8B98A5);
+font-size: 12px;
+
+}
+.actionButton{
+    margin: 0 16px;
+    display: flex;
+    height: 34px;
+    padding: 1px 8px;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    gap: 10px;
+    align-self: stretch;
+    border-radius: 4px;
+border: 0.5px solid var(--accent, #0CCDFF);
+background: var(--accent, #0CCDFF);
+outline: none;
+border: none;
+font-size: 24px;
+}
+.actionButton:hover{
+    background: transparent;
+    border: 0.5px solid var(--accent, #0CCDFF);
+    color: var(--accent, #0CCDFF)
+
+}
