notifying for replies, auto mention adding with reply, mention auto complete tab function

--- a/src/components/Chat/ChatNotification/ChatNotificationBubble.module.css
+++ b/src/components/Chat/ChatNotification/ChatNotificationBubble.module.css
@@ -104,6 +104,10 @@
     border-color: color-mix(in srgb, var(--accent1) 66%, white);
 }
 
+.bold{
+    font-weight: bold;
+}
+
 
 @media only screen and (max-width: 600px){
     .bubble_wrapper{
