--- a/src/App/futa/Create.module.css
+++ b/src/App/futa/Create.module.css
@@ -1,57 +1,3 @@
 .create_token {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: calc(100vh - 56px);
-}
-
-.style_wrapper {
-    max-width: 680px;
-    width: 70vw;
-}
-
-.on_back > *:hover {
-    cursor: pointer;
-}
-
-.create_form {
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-end;
-    gap: 24px;
-}
-
-.form_left,.form_right {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-}
-
-.form_left {
-    align-items: flex-end;
-    width: 160px;
-    /* outline: 2px solid red; */
-}
-
-.description {
-    color: var(--text3);
-    font-size: 12px;
-}
-
-.form_right {
-    width: 400px;
-    gap: 8px;
-
-    /* outline: 2px solid aqua; */
-}
-
-.submit_btn {
-    border-radius: 4px;
-    background: var(--accent3);
-    border: none;
-}
-
-.submit_btn:hover {
-    cursor: pointer;
+    display: grid;
 }
