create page header with animations

--- a/src/index.css
+++ b/src/index.css
@@ -191,7 +191,7 @@
     --dark3: #1e1e24;
     --dark4: #0e0e14;
     --accent1: #0CCDFF;
-    --accent2: #0CCDFF;
+    --accent2: #073749;
     --accent3: #5ffff2;
     --accent4: #71b5fc;
     --accent5: #b5e2fe;
