complete basic styling of `Create.tsx` file

--- a/src/index.css
+++ b/src/index.css
@@ -189,12 +189,12 @@
     --dark1: #06060c;
     --dark2: #12121a;
     --dark3: #1e1e24;
-    --dark4: #0e0e14;
-    --accent1: #f2883a;
-    --accent2: #ffae4d;
+    --dark4: #0E0E14;
+    --accent1: #0CCDFF;
+    --accent2: #073749;
     --accent3: #5ffff2;
     --accent4: #71b5fc;
-    --accent5: #fee0b5;
+    --accent5: #7BE4FF;
 
     --positive: #15be6f;
     --negative: #f6385b;
