--- a/src/components/Futa/Footer/Footer.module.css
+++ b/src/components/Futa/Footer/Footer.module.css
@@ -1,13 +1,18 @@
 .container{
     background: var(--dark1, #06060C);
-    display: flex;
 width: 100%;
 height: 64px;
-justify-content: space-between;
 align-items: center;
 position:fixed;
 bottom:0;
 padding: 8px;
+display: grid;
+grid-template-columns: repeat(3, 1fr);
+
+}
+
+.footerContainer{
+    width: 100%;
 
 }
 
@@ -16,7 +21,8 @@ padding: 8px;
     flex-direction: column;
     align-items: center;
     cursor: pointer;
-    transition: all var(--animation-speed) ease-in-out
+    transition: all var(--animation-speed) ease-in-out;
+    
 }
 
 .footerItem:hover {
