--- a/src/pages/platformFuta/Auctions/Auctions.module.css
+++ b/src/pages/platformFuta/Auctions/Auctions.module.css
@@ -4,6 +4,13 @@
     font-style: normal;
     font-weight: 400;
     line-height: normal;
+
+    display: flex;
+padding: 8px 16px;
+flex-direction: column;
+align-items: flex-start;
+gap: 8px;
+align-self: stretch;
 }
 
 .navPath{
