--- a/src/pages/platformFuta/Create/Create.module.css
+++ b/src/pages/platformFuta/Create/Create.module.css
@@ -4,7 +4,8 @@
     justify-content: space-between;
     align-self: center;
     max-width: 600px;
-    height: calc(100vh - 136px);
+    height: 100%;
+    /* height: calc(100vh - 136px); */
 }
 
 .create_token_top {
