add connect wallet button to /auctions/create

--- a/src/pages/platformFuta/Create/Create.module.css
+++ b/src/pages/platformFuta/Create/Create.module.css
@@ -76,9 +76,11 @@
     font-size: 10px;
 }
 
-.create_button, .create_button_disabled {
+.create_button,
+.create_button_disabled {
     border: none;
     background-color: var(--accent1);
+    cursor: pointer;
 }
 
 .create_button_disabled {
