--- a/src/pages/platformFuta/Create/Create.module.css
+++ b/src/pages/platformFuta/Create/Create.module.css
@@ -6,8 +6,8 @@
     margin: 0 auto;
     padding: 10px;
     max-width: 600px;
-    height: 100%;
-    height: calc(100vh - 136px);
+    height: calc(100svh - 136px);
+    overflow-y: hidden;
 }
 
 .create_token_top {
