--- a/src/pages/platformFuta/Ticker/Ticker.module.css
+++ b/src/pages/platformFuta/Ticker/Ticker.module.css
@@ -1,5 +1,5 @@
 .container{
-    height: calc(100vh - 134px);
+    height: calc(100svh - 134px);
     padding: 8px 16px;
 
 
@@ -92,6 +92,7 @@ background: var(--accent1, #0CCDFF);
     top: 40px;
     overflow-y: scroll;
     padding: 4px;
+    z-index: 2;
 }
 
 .maxDropdownButton{
