--- a/src/pages/platformFuta/Ticker/Ticker.module.css
+++ b/src/pages/platformFuta/Ticker/Ticker.module.css
@@ -11,6 +11,7 @@ justify-content: space-between;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
+    overflow-y: hidden;
 }
 
 .content{
