--- a/src/components/Futa/PlaceholderPage/PlaceholderPage.module.css
+++ b/src/components/Futa/PlaceholderPage/PlaceholderPage.module.css
@@ -9,7 +9,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 100vw;
+    width: 100%;
     height: calc(100vh - 64px);
     padding: 8px;
 }
