refactor navbar dropdown for desktop

--- a/src/components/Futa/Navbar/Navbar.module.css
+++ b/src/components/Futa/Navbar/Navbar.module.css
@@ -110,4 +110,11 @@ color: var(--accent1)
     .logoutButton {
         max-width: 300px;
     }
+
+    .dropdownMenu {
+        width: 300px;
+        left: auto;  
+        right: 16px;   
+       
+    }
 }
