--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,9 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Kode+Mono:wght@400..700&display=swap');
 
+@import url('https://fonts.googleapis.com/css2?family=Fira+Mono:wght@400;500;700&display=swap');
+
+
 /* For simple theme change(special occasion), change portfolio and swap background. No need for a different color scheme*/
 :root {
     --font-logo: 'Lexend Exa', sans-serif;
@@ -282,10 +285,10 @@
         0px 0px 7px rgba(205, 193, 255, 0.2), 0px 0px 4px var(--accent5),
         0px 0px 2px rgba(205, 193, 255, 0.2);
 
-    --font-logo: 'Kode Mono', sans-serif;
-    --font-family: 'Kode Mono', sans-serif;
-    --roboto: 'Kode Mono', monospace;
-    --mono: 'Kode Mono', 'Lexend Deca' sans-serif;
+    --font-logo: "Fira Mono", monospace;;
+    --font-family: "Fira Mono", monospace;;
+    --roboto: "Fira Mono", monospace;;
+    --mono: "Fira Mono", monospace;;
 }
 
 *::placeholder {
