--- a/src/pages/platformFuta/Auctions/Auctions.module.css
+++ b/src/pages/platformFuta/Auctions/Auctions.module.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: column;
     padding: 10px;
+    gap: 8px;
     outline: 3px solid yellow;
 }
 
@@ -49,4 +50,20 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+}
+
+.sort_buttons > button {
+    padding: 0 8px;
+    font-size: 12px;
+    background-color: var(--dark4);
+}
+
+.sort_buttons > .button_on {
+    border: 1px solid var(--accent1);
+    color: var(--accent1);
+}
+
+.sort_buttons > .button_off {
+    border: 1px solid transparent;
+    color: var(--text2);
 }
