--- a/src/components/Chat/MessagePanel/InputBox/MessageInput.module.css
+++ b/src/components/Chat/MessagePanel/InputBox/MessageInput.module.css
@@ -34,6 +34,23 @@
     flex-grow: 1;
 }
 
+.message_input_field_limit_exceeded{
+    font-family: 'Lexend Deca';
+    font-style: normal;
+    font-weight: 300;
+    font-size: var(--body-size);
+    line-height: 15px;
+    display: flex;
+    align-items: center;
+    outline: none;
+    border-color: transparent;
+    color: red;
+    background-color: transparent;
+    flex: none;
+    order: 0;
+    flex-grow: 1;
+}
+
 .input_box_not_allowed {
     display: flex;
     flex-direction: column;
