--- a/src/components/Futa/SearchableTicker/SearchableTicker.module.css
+++ b/src/components/Futa/SearchableTicker/SearchableTicker.module.css
@@ -1,4 +1,4 @@
-.container{
+.container, .content{
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -44,6 +44,7 @@ color: var(--text2)
     justify-content: flex-end;
 }
 .timeDropdownRight button{
+    height: 24px;
     border: 1px solid var(--dark3, #1E1E24);
     background: var(--dark4, #171F22);
     color: var(--text2);
@@ -80,6 +81,7 @@ padding: 4px 4px 4px 8px;
 justify-content: space-between;
 align-items: center;
 cursor: pointer;
+height: 24px;
 }
 .timeDropdownButton p{
 font-size: 12px;
@@ -188,4 +190,13 @@ color: var(--text1)
     flex-direction: column;
     gap: 4px;
   
+}
+
+@media (min-width: 1280px) {
+.content{
+    display: grid;
+    grid-template-columns: auto 380px;
+    align-items: center;
+}
+
 }
