--- a/src/pages/platformFuta/Account/Account.module.css
+++ b/src/pages/platformFuta/Account/Account.module.css
@@ -22,7 +22,7 @@ justify-content: space-between;
     gap: 8px;
 }
 
-.container h2{
+.content h2{
 color: var(--text1, #CEFFFF);
 font-size: 36px;
 text-transform: uppercase;
@@ -82,3 +82,24 @@ transition: all var(--animation-speed) ease-in-out;
     background: transparent;
     color: var(--accent1)
 }
+
+/* desktop */
+.desktopContainer {
+    display: grid;
+    grid-template-columns: auto 390px;
+    padding: 8px 16px;
+    height: calc(100vh - 56px);
+    gap: 16px;
+}
+
+.rightLayout{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+    padding-top: 3.5rem;
+    
+}
+
+
+
