--- a/src/pages/platformFuta/Create/Create.module.css
+++ b/src/pages/platformFuta/Create/Create.module.css
@@ -5,8 +5,10 @@
     align-self: center;
     margin: 0 auto;
     padding: 10px;
-    max-width: 600px;
+    max-width: 400px;
     height: calc(100svh - 420px);
+
+   
 }
 
 .create_token_top {
@@ -14,9 +16,16 @@
     flex-direction: column;
     gap: 8px;
 }
+.create_token_top h3{
+    font-size: 24px;
+    color: var(--text1)
 
-.create_token_top > * {
-    color: var(--text2);
+}
+
+.description{
+    color: var(--text2, #3D565B);
+    font-size: 18px;
+
 }
 
 .nav_path {
@@ -27,6 +36,8 @@
     display: flex;
     flex-direction: column;
     gap: 8px;
+    height: 100%;
+    justify-content: center;
 }
 
 .ticker_input_fields {
@@ -40,14 +51,13 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    padding: 0px 6px;
-    border-left: 4px solid var(--text1);
-    background-color: var(--dark4);
+    
 }
 
 .ticker_input_fields > label > h4 {
-    font-size: 16px;
+    font-size: 24px;
     color: var(--text1);
+    text-transform: uppercase;
 }
 
 .ticker_input_fields > input {
@@ -55,37 +65,85 @@
     background-color: var(--dark4);
     border: none;
     color: var(--text2);
+    height: 40px;
+    text-align: end;
 }
 
 .ticker_input_fields > input:focus {
     outline: none;
 }
 
-.detail_box {
-    display: flex;
-    flex-direction: column;
-    padding: 4px 8px;
-    border: 1px solid grey;
-    color: var(--text2);
-}
 
-.detail_box > div {
+.extraInfoContainer {
+    display: flex;
+    padding: 8px;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+    align-self: stretch;
+    border: 1px solid var(--dark3, #1e1e24);
+    margin-bottom: 8px;
+}
+.extraRow {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.alignCenter {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
-    font-size: 10px;
+    align-items: center;
+    gap: 4px;
+    font-size: 12px;
+    color: var(--text2);
 }
-
 .create_button {
     cursor: pointer;
+    text-transform: uppercase;
+    font-size: 24px;
 }
 
 .create_button,
 .create_button_disabled {
     border: none;
     background-color: var(--accent1);
+
 }
 
 .create_button_disabled {
     background-color: var(--text2);
+    text-transform: uppercase;
+    font-size: 24px;
+}
+
+.footerContainer{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+}
+
+@media only screen and (min-width: 1280px) {
+
+    .mainContainer{
+        transition: all var(--animation-speed) ease-in-out;
+        background: radial-gradient(43.75% 50% at 0% 50%, rgba(12, 205, 255, 0.20) 0%, rgba(12, 205, 255, 0.00) 100%);
+        
+    }
+.create_token{
+  margin-top: 5rem;  
+  /* height: calc(100svh - 320px); */
+  min-height: 500px;
+  max-height: 600px;
+  border-radius: 15px;
+  background: rgba( 6, 6, 13, 0.15 );
+  backdrop-filter: blur( 4px );
+  -webkit-backdrop-filter: blur( 4px );
+  border-radius: 10px;
+  /* border: 1px solid rgba( 255, 255, 255, 0.18 ); */
+ 
+
+}
+
 }
