--- a/src/components/Chat/MessagePanel/InputBox/MentionAutoComplete/MentionAutoComplete.module.css
+++ b/src/components/Chat/MessagePanel/InputBox/MentionAutoComplete/MentionAutoComplete.module.css
@@ -44,11 +44,11 @@
 
 .ment_autocomp_user_selected{
    opacity: 1;
-   /* background: #7371fc; */
-   box-shadow: 0px 0px 2px 0px rgba(115,113,252,1);
+   background: color-mix(in srgb, var(--accent1) 70%, var(--dark1));
+   box-shadow: 0px 0px 2px 0px color-mix(in srgb, var(--accent1) 52%, transparent);
    transform: scale(1.1);
    font-weight: bold;
-   background: rgb(56 77 106);
+   /* background: rgb(56 77 106); */
    
 }
 .ment_autocomp_input{
