--- a/src/pages/platformFuta/Auctions/Auctions.module.css
+++ b/src/pages/platformFuta/Auctions/Auctions.module.css
@@ -3,6 +3,7 @@
     flex-direction: column;
     padding: 12px;
     gap: 8px;
+    height: calc(100vh - 85px);
 }
 
 .auctions_main > h3 {
@@ -19,6 +20,7 @@
         height: calc(100vh - 85px);
         display: grid;
         grid-template-columns: 335px 1fr;
+        
 }
 
 .middleContentFull{
@@ -26,6 +28,13 @@
     display: grid;
     grid-template-rows: 75% 25% ;
     gap: 8px;
+}
+
+.auctionsTickerContainer{
+    height: 100%;
+    display: grid;
+    grid-template-columns: 1fr 390px;
+    gap: 1rem;
 }
 
 .middleContent{
